--- a/app/views/tickets/_form.html.erb
+++ b/app/views/tickets/_form.html.erb
@@ -1,12 +1,12 @@
 <%= form_for @ticket, :html => { :class => 'form-horizontal' } do |f| %>
   <div class="control-group">
-    <%= f.label :customer_name, :class => 'control-label' %>
+    <%= f.label :customer_name, "Name",:class => 'control-label'  %>
     <div class="controls">
       <%= f.text_field :customer_name, :class => 'text_field' %>
     </div>
   </div>
   <div class="control-group">
-    <%= f.label :customer_email, :class => 'control-label' %>
+    <%= f.label :customer_email, "Email", :class => 'control-label' %>
     <div class="controls">
       <%= f.text_field :customer_email, :class => 'text_field' %>
     </div>
