--- a/app/views/tickets/customer.haml
+++ b/app/views/tickets/customer.haml
@@ -1,2 +1,3 @@
-%h2 Hello, world!
+%h2 Dear Customer!
 %p Please feel free to write a ticket and our staff will look at it as soon as possible.
+= render partial: 'form'
